<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.acxiom</groupId>
    <artifactId>metalus-spark_${scala.compat.version}-spark_${spark.compat.version}</artifactId>
    <name>metalus-spark</name>
    <version>2.0.0</version>
    <description>Metalus Spark Support</description>
    <inceptionYear>2018</inceptionYear>

    <properties>
        <spark.version>3.2.1</spark.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.acxiom</groupId>
            <artifactId>metalus-core_${scala.compat.version}</artifactId>
            <version>2.0.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- Spark Streaming -->
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-streaming_${scala.compat.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Spark Libraries -->
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_${scala.compat.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>io.netty</groupId>
                    <artifactId>netty-all</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.netty</groupId>
                    <artifactId>netty</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_${scala.compat.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Test -->
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_${scala.compat.version}</artifactId>
            <version>3.2.9</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
        <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <!-- see http://davidb.github.com/scala-maven-plugin -->
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>4.8.0</version>
                <configuration>
                    <scalaCompatVersion>${scala.compat.version}</scalaCompatVersion>
                    <scalaVersion>${scala.version}</scalaVersion>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <args>
                                <arg>-Xmigration</arg>
                                <arg>-feature</arg>
                                <arg>-deprecation</arg>
                                <!--                                <arg>-dependencyfile</arg>-->
                                <arg>${project.build.directory}/.scala_dependencies</arg>
                            </args>
                        </configuration>
                    </execution>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>doc-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest-maven-plugin</artifactId>
                <version>2.2.0</version>
                <configuration>
                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                    <junitxml>.</junitxml>
                    <!-- Test output file. The "WDF" statement provides cleaner output -->
                    <filereports>WDF TestOutput.txt</filereports>
                </configuration>
                <executions>
                    <execution>
                        <id>test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <skipTests>true</skipTests>
                    <argLine>--illegal-access=permit</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                    <artifactSet>
                        <excludes>
                            <exclude>classworlds:classworlds</exclude>
                            <exclude>junit:junit</exclude>
                            <exclude>jmock:*</exclude>
                            <exclude>*:xml-apis</exclude>
                            <exclude>com.thoughtworks.paranamer:*:jar:</exclude>
                            <exclude>com.fasterxml:*:jar:</exclude>
                            <exclude>org.apache.maven:lib:tests</exclude>
                            <exclude>org.apache.kafka:*:jar:</exclude>
                            <exclude>org.joda:*:jar:</exclude>
                            <exclude>joda-time:*:jar:</exclude>
                            <exclude>log4j:log4j:jar:</exclude>
                            <exclude>org.slf4j:*:jar:</exclude>
                            <exclude>org.scala-lang:*:jar:</exclude>
                            <exclude>org.apache.spark:jar:</exclude>
                            <exclude>org.scalamock:jar:</exclude>
                            <exclude>org.scalatest:jar:</exclude>
                        </excludes>
                    </artifactSet>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
<!--                        <configuration>-->
<!--                            <relocations>-->
<!--                                &lt;!&ndash; This is required to prevent certain distributions from overriding with an older version &ndash;&gt;-->
<!--                                <relocation>-->
<!--                                    <pattern>com.jcraft</pattern>-->
<!--                                    <shadedPattern>metalus.com.jcraft</shadedPattern>-->
<!--                                </relocation>-->
<!--                                <relocation>-->
<!--                                    <pattern>org.json4s</pattern>-->
<!--                                    <shadedPattern>metalus.org.json4s</shadedPattern>-->
<!--                                </relocation>-->
<!--                            </relocations>-->
<!--                        </configuration>-->
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.scoverage</groupId>
                <artifactId>scoverage-maven-plugin</artifactId>
                <version>1.4.11</version>
                <configuration>
                    <scalaVersion>${scala.version}</scalaVersion>
                    <highlighting>true</highlighting>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>spark_3.1</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <spark.compat.version>3.1</spark.compat.version>
                <spark.version>3.1.3</spark.version>
                <json4s.version>3.6.6</json4s.version>
                <mongo.version>3.0.1</mongo.version>
                <scala.compat.version>2.12</scala.compat.version>
                <scala.version>2.12.13</scala.version>
                <jackson.core.version>2.11.1</jackson.core.version>
                <kinesis.client.version>1.12.0</kinesis.client.version>
                <aws-sdk-version>1.11.655</aws-sdk-version>
                <hadoop-aws-version>2.7.7</hadoop-aws-version>
                <delta-lake-version>1.0.1</delta-lake-version>
                <hadoop.minicluster.version>3.3.1</hadoop.minicluster.version>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>org.apache.hadoop</groupId>
                    <artifactId>hadoop-minicluster</artifactId>
                    <version>${hadoop.minicluster.version}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.hadoop</groupId>
                    <artifactId>hadoop-hdfs-client</artifactId>
                    <version>${hadoop.minicluster.version}</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>spark_3.2</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <spark.compat.version>3.2</spark.compat.version>
                <spark.version>3.2.1</spark.version>
                <json4s.version>3.7.0-M11</json4s.version>
                <mongo.version>3.0.2</mongo.version>
                <scala.compat.version>2.12</scala.compat.version>
                <scala.version>2.12.13</scala.version>
                <jackson.core.version>2.12.0</jackson.core.version>
                <kinesis.client.version>1.12.0</kinesis.client.version>
                <aws-sdk-version>1.11.655</aws-sdk-version>
                <hadoop-aws-version>2.7.7</hadoop-aws-version>
                <delta-lake-version>2.0.0</delta-lake-version>
                <hadoop.minicluster.version>3.3.1</hadoop.minicluster.version>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>org.json4s</groupId>
                    <artifactId>json4s-ast_${scala.compat.version}</artifactId>
                    <version>${json4s.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.apache.hadoop</groupId>
                    <artifactId>hadoop-minicluster</artifactId>
                    <version>${hadoop.minicluster.version}</version>
                    <scope>test</scope>
                    <exclusions>
                        <exclusion>
                            <groupId>org.apache.hadoop</groupId>
                            <artifactId>hadoop-hdfs</artifactId>
                        </exclusion>
                        <exclusion>
                            <groupId>org.apache.hadoop</groupId>
                            <artifactId>hadoop-hdfs-client</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
                <dependency>
                    <groupId>org.apache.hadoop</groupId>
                    <artifactId>hadoop-client-minicluster</artifactId>
                    <version>${hadoop.minicluster.version}</version>
                    <scope>test</scope>
                    <exclusions>
                        <exclusion>
                            <groupId>org.apache.hadoop</groupId>
                            <artifactId>hadoop-hdfs</artifactId>
                        </exclusion>
                        <exclusion>
                            <groupId>org.apache.hadoop</groupId>
                            <artifactId>hadoop-hdfs-client</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
                <dependency>
                    <groupId>io.netty</groupId>
                    <artifactId>netty-all</artifactId>
                    <version>4.1.68.Final</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>spark_3.3</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <spark.compat.version>3.3</spark.compat.version>
                <spark.version>3.3.0</spark.version>
                <json4s.version>3.7.0-M11</json4s.version>
                <mongo.version>3.0.2</mongo.version>
                <scala.compat.version>2.12</scala.compat.version>
                <scala.version>2.12.13</scala.version>
                <jackson.core.version>2.12.0</jackson.core.version>
                <kinesis.client.version>1.12.0</kinesis.client.version>
                <aws-sdk-version>1.11.655</aws-sdk-version>
                <hadoop-aws-version>2.7.7</hadoop-aws-version>
                <delta-lake-version>2.1.0</delta-lake-version>
                <hadoop.minicluster.version>3.3.3</hadoop.minicluster.version>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>org.json4s</groupId>
                    <artifactId>json4s-ast_${scala.compat.version}</artifactId>
                    <version>${json4s.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-1.2-api</artifactId>
                    <version>2.17.2</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-api</artifactId>
                    <version>2.17.2</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-core</artifactId>
                    <version>2.17.2</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-slf4j-impl</artifactId>
                    <version>2.17.2</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.hadoop</groupId>
                    <artifactId>hadoop-minicluster</artifactId>
                    <version>${hadoop.minicluster.version}</version>
                    <scope>test</scope>
                    <exclusions>
                        <exclusion>
                            <groupId>org.apache.hadoop</groupId>
                            <artifactId>hadoop-hdfs</artifactId>
                        </exclusion>
                        <exclusion>
                            <groupId>org.apache.hadoop</groupId>
                            <artifactId>hadoop-hdfs-client</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
                <dependency>
                    <groupId>org.apache.hadoop</groupId>
                    <artifactId>hadoop-client-minicluster</artifactId>
                    <version>${hadoop.minicluster.version}</version>
                    <scope>test</scope>
                    <exclusions>
                        <exclusion>
                            <groupId>org.apache.hadoop</groupId>
                            <artifactId>hadoop-hdfs</artifactId>
                        </exclusion>
                        <exclusion>
                            <groupId>org.apache.hadoop</groupId>
                            <artifactId>hadoop-hdfs-client</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
                <dependency>
                    <groupId>io.netty</groupId>
                    <artifactId>netty-all</artifactId>
                    <version>4.1.68.Final</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
            <!-- TODO This should be removed when we figure out what is pulling in the jms libraries -->
            <repositories>
                <repository>
                    <id>JMS Stuff</id>
                    <url>http://builds.archive.org/maven2</url>
                </repository>
            </repositories>
        </profile>
        <profile>
            <id>scala_2.12</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <scala.compat.version>2.12</scala.compat.version>
                <scala.version>2.12.13</scala.version>
            </properties>
        </profile>
        <profile>
            <id>scala_2.13</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <scala.compat.version>2.13</scala.compat.version>
                <scala.version>2.13.8</scala.version>
                <kafka.version>2.4.1</kafka.version>
                <delta-lake-version>2.1.0</delta-lake-version>
            </properties>
        </profile>
    </profiles>
</project>
